--- a/amazon.html
+++ b/amazon.html
@@ -64,55 +64,55 @@
     <div class="box1 box">
         <div class="box-content">
             <h2>Gifts for the gamer</h2>
-            <div class="box-image" style="background-image: url('/games.jpg');" ></div>
+            <div class="box-image" style="background-image: url('assets/games.jpg');" ></div>
             <p>See more</p>
         </div> 
     </div>
     <div class="box2 box">
         <div class="box-content">
         <h2>Laptops for every need</h2>
-        <div class="box-image" style="background-image: url('/laptops.jpg');" ></div>
+        <div class="box-image" style="background-image: url('./assets/laptops.jpg');" ></div>
         <p>Find your laptop here</p>
     </div>
  </div>
     <div class="box3 box">
         <div class="box-content">
         <h2>Beauty steals under $25</h2>
-        <div class="box-image" style="background-image: url('/beauty.jpg');" ></div>
+        <div class="box-image" style="background-image: url('assets/beauty.jpg');" ></div>
         <p>Shop now</p>
     </div> 
 </div>
     <div class="box4 box">
         <div class="box-content">
         <h2>Deals in PCs</h2>
-        <div class="box-image" style="background-image: url('/pcs.jpg');" ></div>
+        <div class="box-image" style="background-image: url('assets/pcs.jpg');" ></div>
         <p>Shop now</p>
     </div> 
     </div>
     <div class="box5 box">
         <div class="box-content">
             <h2>Small gifts under $20</h2>
-            <div class="box-image" style="background-image: url('/smallgift.jpg');" ></div>
+            <div class="box-image" style="background-image: url('assets/smallgift.jpg');" ></div>
             <p>Shop now</p>
         </div> 
     </div>
     <div class="box6 box">
         <div class="box-content">
         <h2>Deals on books</h2>
-        <div class="box-image" style="background-image: url('/books.jpg');" ></div>
+        <div class="box-image" style="background-image: url('assets/books.jpg');" ></div>
         <p>See more</p>
     </div>
  </div>
     <div class="box7 box">
         <div class="box-content">
         <h2>Holiday deals in fashion</h2>
-        <div class="box-image" style="background-image: url('/holiday.jpg');" ></div>
+        <div class="box-image" style="background-image: url('assets/holiday.jpg');" ></div>
         <p>Shop now</p>
     </div> </div>
     <div class="box8 box">
         <div class="box-content">
         <h2>Toys under $25</h2>
-        <div class="box-image" style="background-image: url('/toys.jpg');" ></div>
+        <div class="box-image" style="background-image: url('assets/toys.jpg');" ></div>
         <p>Shop now</p>
     </div> 
     </div>
